# head-first-design-patterns-cpp

./: README.md
abstract-factory/: CMakeLists.txt  README.md  main.cpp
abstract-factory/include/: BlackOlives.hpp  Cheese.hpp  CheesePizza.hpp  ChicagoPizzaIngredientFactory.hpp  ChicagoPizzaStore.hpp  ClamPizza.hpp  Clams.hpp  Dough.hpp  Eggplant.hpp  FreshClams.hpp  FrozenClams.hpp  MarinaraSauce.hpp  MozzarellaCheese.hpp  Mushrooms.hpp  NYPizzaIngredientFactory.hpp  NYPizzaStore.hpp  Onions.hpp  Pepperoni.hpp  PepperoniPizza.hpp  Pizza.hpp  PizzaIngredientFactory.hpp  PizzaStore.hpp  PlumTomatoSauce.hpp  RedPeppers.hpp  ReggianoCheese.hpp  Sauce.hpp  SlicedPepperoni.hpp  Spinach.hpp  ThickCrustDough.hpp  ThinCrustDough.hpp  VeggiePizza.hpp  Veggies.hpp
abstract-factory/src/: CheesePizza.cpp  ChicagoPizzaIngredientFactory.cpp  ChicagoPizzaStore.cpp  ClamPizza.cpp  NYPizzaIngredientFactory.cpp  NYPizzaStore.cpp  PepperoniPizza.cpp  Pizza.cpp  PizzaStore.cpp  VeggiePizza.cpp
adapter/: CMakeLists.txt  Duck.hpp  README.md  main  main.cpp
adapter/include/: MallardDuck.hpp  Turkey.hpp  TurkeyAdapter.hpp  WildTurkey.hpp
command/: GarageDoorOpenCommand.hpp  Light.hpp  LightOnCommand.hpp  README.md  RemoteControl.hpp  StereoOffCommand.hpp  main  main.cpp
command/RemoteControl/: CeilingFan.hpp  Command.hpp  (+10 more)
command/RemoteControlWithUndo/: CMakeLists.txt  CeilingFanOffCommand.hpp  CeilingFanOnCommand.hpp  Command.hpp  GarageDoorDownCommand.hpp  GarageDoorUpCommand.hpp  Light.hpp  LightOffCommand.hpp  LightOnCommand.hpp  MacroCommand.hpp  NoCommand.hpp  RemoteControlWithUndo.hpp  Stereo.hpp  StereoOffCommand.hpp  StereoOnWithCDCommand.hpp  TVOffCommand.hpp  TVOnCommand.hpp  main.cpp
command/RemoteControlWithUndo/include/: CeilingFan.hpp  GarageDoorDownCommand.hpp  GarageDoorUpCommand.hpp  LightOffCommand.hpp  LightOnCommand.hpp  StereoOffCommand.hpp  StereoOnWithCDCommand.hpp  TV.hpp  TVOnCommand.hpp
composite/: CMakeLists.txt  README.md  main.cpp
composite/include/: Menu.hpp  MenuComponent.hpp  MenuItem.hpp  Waitress.hpp
composite/src/: Menu.cpp  MenuComponent.cpp  MenuItem.cpp  Waitress.cpp
compound-patterns/: CMakeLists.txt  CountingDuckFactory.hpp  DuckCall.hpp  DuckFactory.hpp  Flock.hpp  GooseAdapter.hpp  Observable.hpp  QuackCounter.hpp  QuackObservable.hpp  README.md  RubberDuck.hpp  main.cpp
compound-patterns/include/: AbstractDuckFactory.hpp  Flock.hpp  Goose.hpp  MallardDuck.hpp  Observable.hpp  Observer.hpp  Quackable.hpp  Quackologist.hpp  RedheadDuck.hpp
decorator/: CMakeLists.txt  Espresso.h  Mocha.hpp  README.md  main  main.cpp
decorator/include/: Beverage.hpp  CondimentDecorator.hpp  DarkRoast.hpp  Decaf.hpp  HouseBlend.hpp  Milk.hpp  Mocha.hpp  Soy.hpp  Whip.hpp
decorator/src/: Milk.cpp  Mocha.cpp  Soy.cpp  Whip.cpp
diagrams/: abstract-factory.puml  adapter-class-schema.puml  adapter-object-schema.puml  adapter.puml  command-schema.puml  command.puml  composite-schema.puml  composite.puml  compound-patterns.puml  decorator.puml  facade-schema.puml  facade.puml  factory-method.puml  iterator-schema.puml  iterator.puml  observer.puml  singleton.puml  state-schema.puml  state.puml  strategy.puml  template-method-schema.puml  template-method.puml
facade/: Amplifier.hpp  CMakeLists.txt  CdPlayer.hpp  HomeTheaterFacade.hpp  Projector.hpp  README.md  Screen.hpp  StreamingPlayer.hpp  Tuner.hpp  main  main.cpp
facade/include/: CdPlayer.hpp  PopcornPopper.hpp  StreamingPlayer.hpp  TheaterLights.hpp  Tuner.hpp
factory-method/: CMakeLists.txt  ChicagoPizzaStore.hpp  ChicagoStyleCheesePizza.hpp  ChicagoStyleClamPizza.hpp  ChicagoStylePepperoniPizza.hpp  ChicagoStyleVeggiePizza.hpp  NYPizzaStore.hpp  NYStyleCheesePizza.hpp  NYStyleVeggiePizza.hpp  Pizza.hpp  PizzaStore.hpp  README.md  main.cpp
factory-method/include/: ChicagoPizzaStore.hpp  ChicagoStyleCheesePizza.hpp  ChicagoStylePepperoniPizza.hpp  NYPizzaStore.hpp  NYStyleCalmPizza.hpp  NYStyleCheesePizza.hpp  NYStylePepperoniPizza.hpp  Pizza.hpp  PizzaStore.hpp
factory-method/src/: ChicagoPizzaStore.cpp  NYPizzaStore.cpp  Pizza.cpp  PizzaStore.cpp
iterator/: CMakeLists.txt  CafeMenu.hpp  CafeMenuIterator.hpp  DinerMenu.hpp  DinerMenuIterator.hpp  Iterator.hpp  Menu.hpp  MenuItem.hpp  PancakeHouseIterator.hpp  PancakeHouseMenu.hpp  README.md  Waitress.hpp  main.cpp
iterator/include/: CafeMenu.hpp  CafeMenuIterator.hpp  DinerMenu.hpp  DinerMenuIterator.hpp  PancakeHouseIterator.hpp  PancakeHouseMenu.hpp  Waitress.hpp
iterator/src/: CafeMenu.cpp  CafeMenuIterator.cpp  DinerMenu.cpp  DinerMenuIterator.cpp  PancakeHouseIterator.cpp  PancakeHouseMenu.cpp  Waitress.cpp
observer/: CMakeLists.txt  CurrentConditionDisplay.hpp  ForecastDisplay.hpp  HeatIndexDisplay.hpp  Observer.hpp  README.md  StatisticsDisplay.hpp  Subject.hpp  WeatherData.hpp  main  main.cpp
observer/include/: CurrentConditionDisplay.hpp  DisplayElement.hpp  ForecastDisplay.hpp  HeatIndexDisplay.hpp  StatisticsDisplay.hpp  Subject.hpp  WeatherData.hpp
observer/src/: CurrentConditionsDisplay.cpp  ForecastDisplay.cpp  HeatIndexDisplay.cpp  StatisticsDisplay.cpp  WeatherData.cpp
singleton/: ChocolateBoiler.hpp  README.md  main.cpp
state/: CMakeLists.txt  GumballMachine.cpp  GumballMachine.hpp  HasQuarterState.cpp  NoQuarterState.cpp  NoQuarterState.hpp  README.md  SoldOutState.cpp  SoldOutState.hpp  SoldState.cpp  WinnerState.cpp  WinnerState.hpp  main.cpp
state/include/: GumballMachine.hpp  HasQuarterState.hpp  SoldState.hpp  State.hpp
state/src/: GumballMachine.cpp  HasQuarterState.cpp
strategy/: CMakeLists.txt  README.md  main.cpp
strategy/include/: Duck.hpp  DuckCall.hpp  FlyBehavior.hpp  FlyNoWay.hpp  FlyRocketPowered.hpp  FlyWithWings.hpp  MallardDuck.hpp  ModelDuck.hpp  MuteQuack.hpp  Quack.hpp  QuackBehavior.hpp  Squeak.hpp
strategy/src/: Duck.cpp  DuckCall.cpp  FlyNoWay.cpp  FlyRocketPowered.cpp  FlyWithWings.cpp  MallardDuck.cpp  ModelDuck.cpp  MuteQuack.cpp  Quack.cpp  Squeak.cpp
template-method/: CaffeineBeverageWithHook.hpp  CoffeeWithHook.hpp  Makefile  README.md  TeaWithHook.hpp  main.cpp
(+2 files in other folders)
